--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Marko+One&family=Montserrat:wght@600&display=swap');
+
 .App {
-  text-align: center;
+  text-align: left;
+  font-family: 'Marko One', 'Times New Roman', Times, serif;
 }
