--- a/src/components/home/card/index.css
+++ b/src/components/home/card/index.css
@@ -1,7 +1,6 @@
 .card {
-    margin: 0 auto;
+    margin: 20px auto;
     text-align: center;
     max-width: 600px;
     border: 2px solid black;
-
 }
