--- a/src/components/home/card/index.css
+++ b/src/components/home/card/index.css
@@ -1,6 +1,11 @@
 .card {
     margin: 20px auto;
-    text-align: center;
     max-width: 600px;
-    border: 2px solid black;
+    border: 2px solid #6d6d6d;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.card__like {
+    text-align: left;
 }
